@@ -34,7 +34,7 @@ use iMSCP::Execute;
 use iMSCP::File;
 
 # Turn off localisation features to force any command output to be in English
-$ENV{'LC_MESSAGES'} = 'C';
+$ENV{'LANG'} = 'C';
 
 # Do not clear screen at end of script
 $ENV{'IMSCP_CLEAR_SCREEN'} = 0;
