@@ -35,7 +35,7 @@ use warnings;
 use JSON;
 
 # Turn off localisation features to force any command output to be in english
-$ENV{'LC_MESSAGES'} = 'C';
+$ENV{'LANG'} = 'C';
 
 # Decoding received data
 my (
